# roundtable

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
roundtable/: __init__.py  __main__.py  roundtable.py
roundtable/gui/: gui.py  interface.py
roundtable/models/: discussion_room_config.py  log_level.py
roundtable/models/settings/: environment.py  settings.py
roundtable/services/: agents_manager.py  meeting.py  tools_manager.py
roundtable/services/agent_manager/: agent_manager.py
roundtable/services/agents/: agents_manager.py
roundtable/services/discussion_room/: discussion_room.py  trackable_agent.py
roundtable/services/meeting/: meeting.py  meeting_state.py
roundtable/services/team/: team.py
roundtable/services/teams/authoring_team/: authoring_team.py  authoring_team_state.py
roundtable/services/teams/research_team/: research_team.py  research_team_state.py
roundtable/services/tools/: web_scraper_tool.py
roundtable/shared/utils/: configurator.py  logger.py
scripts/: langchain_test.py  langroid_test.py
