[tool.poetry]
name = "roundtable"
version = "0.1.0"
description = "This is a tool that simulates a roundtable discussion using AI agents."
authors = ["ZappaBoy <federico.zappone@justanother.cloud>"]
maintainers = ["ZappaBoy <federico.zappone@justanother.cloud>"]
readme = "README.md"
packages = [{ include = "roundtable" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.4.2"
streamlit = "^1.31.1"
langchain = "^0.1.10"
langsmith = "^0.1.13"
langchain-experimental = "^0.0.53"
langgraph = "^0.0.26"
langchain-openai = "^0.0.8"
langchainhub = "^0.1.15"
openai = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
poetry2setup = "^1.1.0"
pytest-env = "^0.8.1"

[tool.pytest.ini_options]
addopts = "-s -v"
pythonpath = [
    "roundtable"
]
env = [
    "ENVIRONMENT=testing",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
roundtable = "roundtable:main"